tests/golden/custom/rabbitmq-operator/rabbitmq-operator/rabbitmq/10_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: rabbitmq
    test.net: true
  name: rabbitmq
spec: {}
